--- a/.env
+++ b/.env
@@ -44,3 +44,4 @@ DATABASE_URL="sqlite:///%kernel.project_dir%/var/data/main.db"
 ###< symfony/mailer ###
 OMDB_API_KEY=yyyyyyyyy
 ADMIN_PASSWORD=xxxxxxxxx
+IS_LOGGED=1
