--- a/config/services.yaml
+++ b/config/services.yaml
@@ -24,3 +24,6 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\Finder\EntityFinderInterface:
+        alias: 'App\Finder\MyService'
