--- a/.env
+++ b/.env
@@ -45,3 +45,11 @@ DATABASE_URL="sqlite:///%kernel.project_dir%/var/data/main.db"
 OMDB_API_KEY=yyyyyyyyy
 ADMIN_PASSWORD=xxxxxxxxx
 IS_LOGGED=1
+
+###> symfony/discord-notifier ###
+# DISCORD_DSN=discord://TOKEN@default?webhook_id=ID
+###< symfony/discord-notifier ###
+
+###> symfony/slack-notifier ###
+# SLACK_DSN=slack://TOKEN@default?channel=CHANNEL
+###< symfony/slack-notifier ###
