--- a/.env
+++ b/.env
@@ -45,6 +45,7 @@ DATABASE_URL="sqlite:///%kernel.project_dir%/var/data/main.db"
 OMDB_API_KEY=yyyyyyyyy
 ADMIN_PASSWORD=xxxxxxxxx
 IS_LOGGED=1
+COMPOSER_PATH="%kernel.project_dir%/composer.json"
 
 ###> symfony/discord-notifier ###
 # DISCORD_DSN=discord://TOKEN@default?webhook_id=ID
@@ -53,3 +54,4 @@ IS_LOGGED=1
 ###> symfony/slack-notifier ###
 # SLACK_DSN=slack://TOKEN@default?channel=CHANNEL
 ###< symfony/slack-notifier ###
+
