--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,13 +4,15 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    default_database_url: "null://null"
 
 services:
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
-        # bind:
+        bind:
+            string $sfVersion: '%env(key:require:key:symfony:key:extra:json:file:resolve:COMPOSER_PATH)%'
         #    bool $isLogged: '%env(bool:IS_LOGGED)%'
 
     # makes classes in src/ available to be used as services
