--- a/.env
+++ b/.env
@@ -43,7 +43,7 @@ DATABASE_URL="sqlite:///%kernel.project_dir%/var/data/main.db"
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
 OMDB_API_KEY=yyyyyyyyy
-ADMIN_PASSWORD=xxxxxxxxx
+ADMIN_PWD=xxxxxxxxx
 IS_LOGGED=1
 COMPOSER_PATH="%kernel.project_dir%/composer.json"
 
