--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,14 +4,28 @@ security:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        users_in_memory: { memory: null }
+        users_in_memory:
+            memory:
+                users:
+                    admin@admin.com: { password: '%env(string:ADMIN_PWD)%', roles: [ROLE_USER, ROLE_ADMIN] }
+        app_entity_users:
+            entity:
+                class: App\Entity\User
+                property: email
+        app_all_users:
+            chain:
+                providers: [users_in_memory, app_entity_users]
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
-            provider: users_in_memory
+            provider: app_all_users
+            custom_authenticator: App\Security\AppLoginFormAuthenticator
+            logout:
+                path: app_logout
+                target: app_default_index
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
