--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -3,6 +3,15 @@ security:
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
+    access_decision_manager:
+        strategy: affirmative # priority, consensus, unanimous
+        allow_if_all_abstain: false
+    role_hierarchy:
+        ROLE_MODERATOR: ROLE_USER
+        ROLE_PROVIDER: ROLE_USER
+        ROLE_ADMIN:
+            - ROLE_MODERATOR
+            - ROLE_PROVIDER
     providers:
         users_in_memory:
             memory:
@@ -36,7 +45,10 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/(login|register), roles: PUBLIC_ACCESS }
+        - { path: ^/admin/(book|movie)/\d+/edit, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/, roles: IS_AUTHENTICATED_FULLY }
         # - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
