--- a/.env
+++ b/.env
@@ -46,6 +46,7 @@ OMDB_API_KEY=yyyyyyyyy
 ADMIN_PWD=xxxxxxxxx
 IS_LOGGED=1
 COMPOSER_PATH="%kernel.project_dir%/composer.json"
+IS_MAINTENANCE=0
 
 ###> symfony/discord-notifier ###
 # DISCORD_DSN=discord://TOKEN@default?webhook_id=ID
