--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -18,7 +18,7 @@ framework:
         cookie_samesite: lax
         storage_factory_id: session.storage.factory.native
 
-    #esi: true
+    esi: true
     #fragments: true
     php_errors:
         log: true
