--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -2,6 +2,8 @@ twig:
     default_path: '%kernel.project_dir%/templates'
     form_themes:
         - 'bootstrap_5_horizontal_layout.html.twig'
+    globals:
+        sf_version: '%env(key:require:key:symfony:key:extra:json:file:resolve:COMPOSER_PATH)%'
 
 when@test:
     twig:
